# secretify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: update.yml
src/: main.rs
src/secrets/: grabber.rs  mod.rs  models.rs  summarizer.rs  utils.rs
